<resources>
  <string name="app_name">MyDribbble</string>
  <string name="cancel">Cancel</string>
  <string name="update">Update</string>
  <string name="please_wait">Please wait...</string>
  <string name="create_bunket">create a bucket</string>
  <string name="input_bucket_name">Enter the name of the bucket</string>
  <string name="input_bucket_description">Enter the description of this bucket</string>
  <string name="create">create</string>
  <string name="bucket_name_null">bucket_name_null</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search">search</string>
  <string name="input_keyword">input keyword</string>
  <string name="start_speak">Please say the keywords</string>
  <string name="net_disable">网络异常</string>
  <string name="click_to_login">click_to_login</string>
  <string name="home">home</string>
  <string name="explore">explore</string>
  <string name="my_buckets">my_buckets</string>
  <string name="likes">likes</string>
  <string name="settings">Settings</string>
  <string name="logout_hint_title">You are logging out</string>
  <string name="logout_hint">Are you sure you want to log out? This will make you lose some functionality</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="login_success">login_success</string>
  <string name="login_failed">登录失败</string>
  <string name="title_activity_navi">NaviActivity</string>

  <string name="action_settings">Settings</string>
  <string name="this_is_title">title_name</string>
  <string name="this_is_Author">this is Author</string>
  <string name="git_name">GIF</string>
  <string name="failed_to_load">Failed to load,Click to try again</string>
  <string name="click_retry">click to try again</string>
  <string name="no_shot">no shot here</string>
  <string name="add_comment_hint">Add your comment</string>
  <string name="like_failed">like failed</string>
  <string name="unlike_failed">unlike failed</string>
  <string name="account_not_player">Your account may not be player T^T</string>
  <string name="share">share</string>
  <string name="download">download</string>
  <string name="open_in_browser">open_in_browser</string>
  <string name="into_the_bucket">into the bucket</string>
  <string name="not_logged">not logged</string>
  <string name="no_comment">no comment</string>
  <string name="like_success">like success</string>
  <string name="no_description">No Description</string>
  <string name="shots">shots</string>
  <string name="no_personal_introduction">no personal introduction</string>
  <string name="follow">follow</string>
  <string name="unfollow">unfollow</string>
  <string name="follow_success">follow success</string>
  <string name="follow_failed">follow failed</string>
  <string name="un_follow_success">unfollow success</string>
  <string name="un_follow_failed">unfollow failed</string>
  <string name="sort">sort</string>
  <string name="now">now</string>
  <string name="week">week</string>
  <string name="month">month</string>
  <string name="year">year</string>
  <string name="ever">ever</string>
  <string name="buckets">Buckets</string>
  <string name="other">other</string>
  <string name="version">version</string>
  <string name="lisense">lisense</string>
  <string name="clear_cache">clear cache</string>
  <string name="clear_success">clear success</string>
  <string name="delete_bucket">delete bucket</string>
  <string name="whether_to_delete_bucket">whether to delete bucket?</string>
  <string name="delete">delete</string>
  <string name="no_bucket">no bucket</string>
  <string name="modify_bucket">modify bucket</string>
  <string name="delete_success">delete success</string>
  <string name="delete_failed">delete failed</string>
  <string name="modify_success">modify success</string>
  <string name="add_success">add success</string>
  <string name="add_failed">add failed</string>
  <string name="modify_failed">modify failed</string>
  <string name="no_likes">no likes</string>


  <string-array name="sorts">
    <!--最受欢迎的-->
    <item>Popular</item>
    <!--评论最多的-->
    <item>Most commented</item>
    <!--最近的-->
    <item>Most recent</item>
    <!--浏览量最大的-->
    <item>Most viewed</item>
  </string-array>
  <string-array name="sort_list">
    <!--任何作品-->
    <item>Any</item>
    <!--动画-->
    <item>Animated</item>
    <!--携带附件的-->
    <item>With attachments</item>
    <!--初次上线的-->
    <item>Debuts</item>
    <!--季度精选-->
    <item>Playoffs</item>
    <!--回炉重造  再创作-->
    <item>Rebounds</item>
    <!--团队作品-->
    <item>Teamwork</item>
  </string-array>
</resources>
